<resources>

    <string name="app_id">237283639728754</string>
    <string name="parse_id">zdWe11jTmmRmb5wCR9dtQdF3GohrPyHeuLAzihnP</string>
    <string name="parse_client_key">VB2WIVxrbuzlY555vJ8Dt4LUp5s2y1vG7NCB71vU</string>
    <string name="app_name">Drop</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open!</string>
    <string name="drawer_closed">Closed</string>
    <string name="drop">Drop!</string>
    <string name="thumbnail">Thumbnail</string>

    <!-- Menu Titles -->
    <string name="menu_settings">settings</string>
    <string name="menu_gallery">*debug* gallery</string>
    <string name="menu_saved">saved</string>
    <string name="menu_map">map</string>
    <string name="menu_drawer">drawer</string>
    <string name="log_out">Log Out</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>leave a note</item>
        <item>dropped</item>
        <item>saved</item>
        <item>map</item>
        <item>settings</item>
        <item>log out</item>
    </string-array>

    <!-- Activity Titles -->
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_camera_screen">CameraScreen</string>
    <string name="title_activity_draw_screen">DrawScreen</string>
    <string name="title_activity_edit_note_screen">EditNoteScreen</string>
    <string name="title_activity_select_recipients">SelectRecipients</string>
    <string name="title_activity_drop_note_screen">DropNoteScreen</string>
    <string name="title_activity_dropped_list_screen">DroppedListScreen</string>
    <string name="title_activity_saved_list_screen">SavedListScreen</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_map_screen">MapScreen</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_view_note_screen">ViewNoteScreen</string>
    <string name="Login">Log In</string>
    <string name="note">Note</string>
    <string name="to">To:</string>
    <string name="nobody">Nobody</string>

    <!-- Preferences -->
    <string name="pref_monkeys">Monkeys?</string>
    <string name="pref_monkeys_summ">If you want monkeys.</string>
    <string name="pref_spying_level">Location Spying Intrusiveness</string>

    <string-array name="pref_spying_level_entries">
        <item>Low</item>
        <item>Moderate</item>
        <item>Extreme</item>
        <item>Echelon</item>
    </string-array>

    <string name="title_activity_drawer">DrawerActivity</string>
    
    <!--  Geofence Messages -->
   <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>

</resources>