<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" 
        />
    <item 
        android:id="@+id/gallery"
        android:title="@string/menu_gallery"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    <item 
        android:id="@+id/saved"
        android:title="@string/menu_saved"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    <item 
        android:id="@+id/map"
        android:title="@string/menu_map"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    <item 
        android:id="@+id/logout"
        android:title="@string/log_out"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
</menu>
