<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editNoteRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/edit_note_thumbnail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"        
        android:visibility="visible"
        android:src="@drawable/ic_action_search"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:id="@+id/editNoteFields"
        android:background="@color/transBlack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"                
        >       

	     <EditText
	         android:id="@+id/edit_note_content"
	         android:background="@drawable/edit_note_field_rounded"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"	       
	         android:layout_centerVertical="true"	         
	         android:layout_marginLeft="5dp"
	         android:layout_marginRight="5dp"
	         android:layout_marginTop="15dp"	         
	         android:layout_alignParentTop="true"
	         android:maxLength="140"
	         android:hint="@string/edit_note_field_hint"
	         android:inputType="textMultiLine" />	
	
	    <EditText
	        android:id="@+id/recievers"
	        android:background="@drawable/edit_note_field_rounded"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"	       
	        android:layout_below="@id/edit_note_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="15dp"
	        android:hint="@string/nobody"
	        android:inputType="text" />	
	
	    <Button
			android:id="@+id/editScreen_drop_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_below="@id/recievers"	
			android:layout_marginTop="15dp"		
			android:layout_marginBottom="15dp"			
			android:layout_centerHorizontal="true"			
			android:text="@string/drop" />         
    </RelativeLayout>    
</RelativeLayout>


